# Proyecto-final-Deep-learning

./: .buildinfo  .gitignore  Makefile  README.md  append_section7_to_nb04.py  build_benchmark_final_nb.py  build_benchmark_nb.py  build_eda_nb.py  build_guide_paper_nb.py  build_sota_nb.py  genindex.html  intro.html  objects.inv  pyproject.toml  search.html  searchindex.js
_sources/chapters/: 03_state_of_the_art.md  04_benchmark_models.md
chapters/: 01_problem_dataset.html  02_eda.html  03_state_of_the_art.html  04_benchmark_models.html  05_guide_paper.html  06_benchmark_final.html  07_reproducibility.html
chapters/notebooks/: 01_problem_dataset.html  02_eda.html  03_state_of_the_art.html  04_benchmark_models.html  05_guide_paper.html  06_benchmark_final.html
config/: config.yaml  regions.yaml  stations.yaml
config/models/: gru.yaml  informer.yaml  lstm.yaml  nbeats.yaml  persistence.yaml  tcn.yaml  tft.yaml  transformer.yaml
data/: README.md
data/raw/: README.md
jupyter_book/: _config.yml  _toc.yml  intro.md
jupyter_book/chapters/: 01_problem_dataset.md  02_eda.md  05_guide_paper.md  06_benchmark_final.md  07_reproducibility.md
src/: __init__.py
src/benchmark/: __init__.py  compare.py  report.py  stats_tests.py
src/data/: __init__.py  clean.py  features.py  ingest_inmet.py  process.py  resample.py  scalers.py  (+2 more)
tests/: conftest.py  test_metrics.py  test_process_integrity.py  test_regions_consistency.py  test_sampling_toggle.py  test_scaler_fit_train_only.py  test_seed.py  test_split_no_leakage.py  test_split_real_data.py  test_windowing_no_leakage.py
(+31 files in other folders)
